fix: keep align-items: start in nav links

--- a/src/less/_page.less
+++ b/src/less/_page.less
@@ -1,6 +1,7 @@
 @import './__vars.less';
 
 nav {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   padding: var(--spacing);
